name:                leveldb-rados
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Nathan Howell
maintainer:          nhowell@alphaheavy.com
copyright:           Alpha Heavy Industries, Inc.
category:            Database
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  default-language:  Haskell2010
  exposed-modules:   Database.LevelDB.Rados
  build-depends:     base >=4.6,
                     leveldb-haskell

  c-sources:         cbits/RadosEnv.cpp
  include-dirs:      /opt/ceph/include
